# news

./: .gitignore  ArticleSystemPrompt.txt  README.md  ResearchSystemPrompt.txt  json2img.py  main.py  news.py  pyproject.toml  utils.py
agent/: requirements.txt
agent/core/: base_code.py  code_agent.py  google.py  mistral.py  openai.py  prompts.py  prompts.yaml
agent/tools/: Tool.py  rss.py  web.py
backend/: abstraction_scraper.py  pyproject.toml  readme.md
backend/tools/: readme.md  scraper.py
backend/tools/scrapers/: feeds.py  llm_scraper.py  prompts.py  rss_parse.py  scraper.py
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/news/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/news/src/app/: globals.css  layout.tsx  page.tsx
ui/news/src/app/api/generate-news/: route.ts
ui/news/src/app/components/: header.tsx  news-article.tsx  news-prompt.tsx  page-layout.tsx  theme-toggle.tsx
ui/news/src/app/config/: topics.ts
ui/news/src/app/n/[slug]/: page.tsx
ui/news/src/app/types/: article.ts
ui/news/src/app/utils/: date-utils.ts
ui/src/app/api/generate-news/: route.ts
ui/src/app/components/: loading-layout.tsx  theme-root.tsx  topic-navigation.tsx
ui/src/app/n/[slug]/: page.tsx
ui/src/app/utils/: article-utils.ts
