[project]
name = "backend"
version = "0.1.0"
description = "backend for news"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "elevenlabs>=2.5.0",
    "eval-type-backport>=0.2.2",
    "exa-py>=1.14.13",
    "flask>=3.1.1",
    "google-genai>=1.23.0",
    "markdownify>=1.1.0",
    "mistralai>=1.8.2",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "readability-lxml>=0.8.4.1",
    "reader>=3.18",
    "requests>=2.32.4",
    "rsa>=4.9.1",
    "selenium>=4.33.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.1",
    "uritemplate>=4.2.0",
    "websockets>=15.0.1",
]
